// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageContent component should render properly 1`] = `
.c0 {
  background-color: #eff2f4;
  overflow: auto;
  padding-top: 32px;
}

@media (max-width:1279px) {
  .c0 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding-left: calc(24px + (((100vw - 1280px) / 160) * 16));
    padding-right: calc(24px + (((100vw - 1280px) / 160) * 16));
  }
}

@media (min-width:1440px) {
  .c0 {
    padding-left: 40px;
    padding-right: 40px;
  }
}

<div>
  <main
    class="c0"
  >
    Demo PageContent
  </main>
</div>
`;

exports[`PageContent component should render with loader properly 1`] = `
.c2 {
  font-size: 56px;
}

.c2 * {
  fill: #126AFA;
}

.c0 {
  background-color: #eff2f4;
  overflow: auto;
  padding-top: 32px;
}

.c1 {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  background-color: rgba(255,255,255,0.7);
  z-index: 1;
}

@media (max-width:1279px) {
  .c0 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding-left: calc(24px + (((100vw - 1280px) / 160) * 16));
    padding-right: calc(24px + (((100vw - 1280px) / 160) * 16));
  }
}

@media (min-width:1440px) {
  .c0 {
    padding-left: 40px;
    padding-right: 40px;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2"
        height="1em"
        viewBox="0 0 100 100"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M82 35.7C74.1 18 53.4 10.1 35.7 18S10.1 46.6 18 64.3l7.6-3.4c-6-13.5 0-29.3 13.5-35.3s29.3 0 35.3 13.5l7.6-3.4z"
        >
          <animatetransform
            attributeName="transform"
            attributeType="XML"
            dur="2s"
            from="0 50 50"
            repeatCount="indefinite"
            to="360 50 50"
            type="rotate"
          />
        </path>
      </svg>
    </div>
    Demo PageContent
  </main>
</div>
`;
